--- a/next-amazona/package.json
+++ b/next-amazona/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.3.4",
     "next": "12.1.6",
+    "next-connect": "^0.12.2",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
